@@ -106,10 +106,14 @@ JSDOC.TokenStream.prototype.balance = function(/**String*/start, /**String*/stop
 }
 
 JSDOC.TokenStream.prototype.getMatchingToken = function(/**String*/start, /**String*/stop) {
-	if (!stop) stop = JSDOC.Lang.matching(start);
-	
 	var depth = 0;
 	var cursor = this.cursor;
+	
+	if (!start) {
+		start = JSDOC.Lang.matching(stop);
+		depth = 1;
+	}
+	if (!stop) stop = JSDOC.Lang.matching(start);
 	
 	while ((token = this.tokens[cursor])) {
 		if (token.is(start)) {
